--- a/css/prettyscribe.css
+++ b/css/prettyscribe.css
@@ -2,4 +2,5 @@ body {
     /* font-family: 'Fjalla One', sans-serif; */
     font-family: 'Source Sans Pro', sans-serif;
     font-family: 'PT Serif', serif;
+    break-after: avoid;
 }
