AoS HTML display WIP.

--- a/css/prettyscribe.css
+++ b/css/prettyscribe.css
@@ -66,7 +66,7 @@ body {
     background-color: #8a7c32;
 }
 
-.table {
+.aos_table {
     border-top: 1px solid #8a7c32;
     border-bottom: 1px solid #8a7c32;;
 }
