--- a/css/prettyscribe.css
+++ b/css/prettyscribe.css
@@ -138,7 +138,7 @@ body {
 }
 .wh40k_unit_sheet > table {
     --borderColor: black;
-    --notchSize: 10px;
+    --notchSize: 0.8em;
     --borderSize: 1px;
 
     -webkit-print-color-adjust: exact;
@@ -183,21 +183,6 @@ body {
     text-transform: uppercase
 }
 
-.wh40k_unit_sheet > table > .unit_header {
-    font: bold 1.5em sans-serif;
-    text-align: center;
-    text-transform: uppercase
-}
-
-.wh40k_unit_sheet > table > .unit_header>*>td {
-    box-shadow: inset 0 0 0 9999px rgb(0 0 0);
-    color: white;
-}
-
-.wh40k_unit_sheet > table > thead.header_row th {
-    white-space: nowrap;
-}
-
 .wh40k_unit_sheet > table > thead.info_row > tr > td:first-child {
     font: bold 1em sans-serif;
     text-transform: uppercase;
@@ -212,36 +197,54 @@ body {
     margin-bottom: 0.35em;
 }
 
-.wh40k_unit_sheet > table > * > * > * > div.unit_costs {
-    font: bold 0.8em serif;
-    white-space: nowrap;
-    margin-left: -1em;
+.wh40k_unit_sheet > table > thead.unit_header {
+    text-align: center;
+    text-transform: uppercase
 }
 
-.wh40k_unit_sheet > table > * > * > * > div.unit_costs img {
+.wh40k_unit_sheet > table > thead.unit_header > tr > td:nth-child(2) {
+    font: bold 1.5em sans-serif;
+}
+
+.wh40k_unit_sheet > table > thead.unit_header > tr > td {
+    box-shadow: inset 0 0 0 9999px rgb(0 0 0);
+    color: white;
+}
+
+.wh40k_unit_sheet > table > thead.header_row > tr > th {
+    white-space: nowrap;
+}
+
+.wh40k_unit_sheet > table > thead.unit_header > tr > td > div.unit_costs {
+    font: bold 1.2em serif;
+    white-space: nowrap;
+    display: flex;
+}
+
+.wh40k_unit_sheet > table > thead.unit_header > tr > td > div.unit_costs > span > img {
     height: 1.4em;
     width: 1.4em;
 }
 
-.wh40k_unit_sheet > table > * > * > * > div.unit_costs span {
+.wh40k_unit_sheet > table > thead.unit_header > tr > td > div.unit_costs > span:not(:first-child) {
+    margin-left: 0.5em;
+}
+
+.wh40k_unit_sheet > table > thead.unit_header > tr > td > div.unit_costs > span {
+    --borderColor: white;
+    --notchSize: 0.5em;
+    --borderSize: 1px;
     width: 1.9em;
     height: 1.9em;
     padding: 2px;
     font-size: 0.8em;
-}
-
-.wh40k_unit_sheet > table > * > * > * > div.unit_costs span:not(:first-child) {
-    margin-left: 0.5em;
-}
-
-.wh40k_unit_sheet > table > * > * > * > div.unit_costs > span {
-    --borderColor: white;
-    --notchSize: 5px;
-    --borderSize: 1px;
     position: relative;
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
+/* Render an octogonal border around certain elements. */
 .wh40k_unit_sheet > table > * > * > * > div.unit_costs > span:after,
 .wh40k_unit_sheet > table:after {
     --bothSize: calc(var(--notchSize) + var(--borderSize)/2);
