40k: fix costs, add to tests
Previous fix for issue #49 caused unit upgrades to double-count costs. Fix that, since unit costs already include upgrade costs.

While we're at it:
 - add tests for costs
 - refactor roster and unit costs to use Costs object
 - add CP cost to unit data cards

Random musings
 - we should prolly include abilities with CP costs in modelList (abilities section)
 - in lieu of that, need to find a good place to add unit CP to summary table, since not all CP costs show up in summary right now (eg commanders' CP bonus)
 - if we add abilities with CP costs, could also add pts costs too, and include selections to modelList. battlescribe does this, but it makes the modelList pretty verbose

--- a/css/prettyscribe.css
+++ b/css/prettyscribe.css
@@ -270,6 +270,15 @@ label {
     align-items: center;
 }
 
+.wh40k_unit_sheet > table > thead.unit_header > tr > td > div.unit_costs > span > span {
+  font-size: 0.6em;
+}
+
+.wh40k_unit_sheet > table > thead.unit_header > tr > td > div.unit_cp_costs {
+  flex-direction: row-reverse;
+  padding-right: calc(var(--notchSize) - 0.25rem) /* Offset td's 0.25rem padding-right. */
+}
+
 /* Render an octogonal border around certain elements. */
 .wh40k_unit_sheet > table > * > * > * > div.unit_costs > span:after,
 .wh40k_unit_sheet > table:after {
