40k: fix options div a little on mobile
For 40k, make sure the options div wraps correctly on mobile.

Minor refactor to move code to detect extra costs into roster40k.

--- a/css/prettyscribe.css
+++ b/css/prettyscribe.css
@@ -161,6 +161,11 @@ label {
     margin-bottom: 0.5em;
 }
 
+.wh40k_option {
+    margin-left: 0.75em;
+    display: inline-block;
+}
+
 .wh40k_unit_sheet {
     padding: 0 10px 0 5px;
 }
