Basic support for Middle Earth SBG

--- a/css/prettyscribe.css
+++ b/css/prettyscribe.css
@@ -344,6 +344,151 @@ label {
     line-height: 1;
 }
 
+/* MESBG Start */
+.mesbg_container {
+    font-family: 'Crimson Pro', serif;
+    font-size: 18px;
+}
+@media print {
+    .mesbg_container {
+        font-size: 12px;
+    }
+}
+.mesbg_container  * {
+    margin: 0;
+    padding: 0;
+}
+.mesbg_rosterName {
+    font-size: 1.5em;
+    font-weight: lighter;
+}
+.mesbg_rosterInfo {
+    font-size: 1em;
+}
+.mesbg_h1 {
+    font-size: 1.5em;
+}
+.mesbg_h2 {
+    font-size: 1.25em;
+}
+.mesbg_h3 {
+    font-size: 1.125em;
+}
+.mesbg_h4 {
+    font-size: 1.125em;
+}
+.mesbg_equipmentList {
+    font-size: 1em;
+}
+.mesbg_profileTable {
+    border: 1px solid #333;
+    border-collapse: collapse;
+}
+.mesbg_profileTable tr th {
+    width: 2em;
+    padding: 4px 8px;
+    text-align: center;
+    font-size: 1.25em;
+    background-color: #ccc;
+}
+.mesbg_trackerTable tr td {
+    padding: 4px;
+}
+.mesbg_trackerTable tr th {
+    text-align: center;
+}
+.mesbg_profileTable tr td {
+    width: 2em;
+    padding: 4px 8px;
+    text-align: center;
+    font-size: 1em;
+}
+.mesbg_powerTable tr th {
+    text-align: left;
+    padding: 4px 16px 4px 0px;
+}
+.mesbg_list {
+    margin-left: 1em;
+}
+.mesbg_cardWargear {
+    font-size: 1.25;
+    font-weight: bold;
+}
+.mesbg_noBreak {
+    break-inside: avoid;
+}
+.mesbg_pageBreak {
+    break-before: page;
+}
+.mesbg_diceBlock {
+    width: 1in;
+    height: 1in;
+    border-radius: 0.125in;
+    border: 1px solid #333;
+}
+.mesbg_flexGrid {
+    display: flex;
+    flex-wrap: wrap;
+}
+.mesbg_flexGrid > * {
+    width: calc(50% - 16px);
+    margin-right: 16px;
+}
+.mesbg_flexGrid > *:last-child {
+    margin-right: 0px;
+}
+/*
+.mesbg_flex > *  {
+    display: inline-block;
+}
+*/
+.mesbg_flex  {
+ display: flex;
+    align-items: center;
+}
+.mesbg_flexBetween {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.mesbg_card {
+    border: 1px solid #333;
+    padding: 16px;
+    margin-bottom: 16px;
+    break-inside: avoid;
+}
+.mesbg_toggleHolder {
+    border: 1px dashed #333;
+    padding: 16px;
+    margin-bottom: 16px;
+    break-inside: avoid;
+}
+.mesbg_toggleHolder > * {
+    margin-left: 16px;
+}
+.mesbg_bumpDown {
+    margin-bottom: 8px;
+}
+.mesbg_twoColumn {
+    column-count: 2;
+    column-gap: 24px;
+}
+@media screen and (max-width: 800px) {
+    .mesbg_twoColumn {
+        column-count: 1;
+        column-gap: 0px;
+    }
+}
+.mesbg_hideMe {
+    display: none;
+}
+@media print {
+    .mesbg_noPrint {
+        display: none;
+    }
+}
+/* MESBG End */
+
 .hh2-rule-link {
     color: black;
 }
