--- a/css/prettyscribe.css
+++ b/css/prettyscribe.css
@@ -222,34 +222,35 @@ label {
     border-bottom-color: currentColor;
 }
 
-.wh40k_unit_sheet > table > *:not(.keywords_row) > * > *:not(:first-child):not(:last-child) {
+.wh40k_unit_sheet table > *:not(.keywords_row) > * > *:not(:first-child):not(:last-child) {
     text-align: center;
 }
 
 .wh40k_unit_sheet > table > thead.keywords_row > * > * {
     text-align: left;
+    vertical-align: top;
 }
 
 .wh40k_unit_sheet > table > * > * > td {
     padding: 0.1rem 0.25rem;
 }
 
-.wh40k_unit_sheet > table > * > * > *:first-child {
+.wh40k_unit_sheet table > * > * > *:first-child {
     padding-left: var(--notchSize);
 }
 
-.wh40k_unit_sheet > table > thead.info_row > tr > td:first-child,
-.wh40k_unit_sheet > table > thead.info_row.keywords_row > tr > td:nth-child(3) {
+.wh40k_unit_sheet table > thead.info_row > tr > td:first-child,
+.wh40k_unit_sheet table > thead.info_row.keywords_row > tr > td:nth-child(3) {
     font: bold 1em sans-serif;
     text-transform: uppercase;
     vertical-align: top;
 }
 
-.wh40k_unit_sheet > table > thead.info_row > tr > td {
+.wh40k_unit_sheet table > thead.info_row > tr > td {
     box-shadow: inset 0 0 0 9999px rgb(0 0 0 / 2%);
 }
 
-.wh40k_unit_sheet > table > thead.info_row > tr > td:not(:first-child) > div > div:not(:last-child) {
+.wh40k_unit_sheet table > thead.info_row > tr > td:not(:first-child) > div > div:not(:last-child) {
     margin-bottom: 0.35em;
 }
 
@@ -267,7 +268,7 @@ label {
     color: white;
 }
 
-.wh40k_unit_sheet > table > thead > tr.header_row > th {
+.wh40k_unit_sheet table > thead > tr.header_row > th {
     text-transform: uppercase;
     white-space: nowrap;
 }
@@ -342,6 +343,16 @@ label {
             var(--bothSize) var(--borderSize),
             var(--borderSize) var(--bothSize)
     );
+}
+
+.wh40k_unit_sheet > table > * > * > td.subTableTd {
+    padding: 0;
+    vertical-align: top;
+    border-right: 1px solid black;
+}
+
+.wh40k_unit_sheet > table > * > * > td.subTableTd > table {
+    margin-bottom: 0;
 }
 
 .wh40k_rules > div > p {
