40k: first pass at reordering units
First pass at reordering units as per #136 . Several things need to be addressed:
- need visual indicator of where drop will happen
- need to determine whether to drop before or after the row that we drag to; right now it always drops before
- need to figure out how to handle duplicate datasheets that get combined

--- a/css/prettyscribe.css
+++ b/css/prettyscribe.css
@@ -583,3 +583,7 @@ body:not(.single_column) .wh40k_unit_sheet > table > * > * > td.subTableTd > div
 .page_break {
     break-before: page;
 }
+
+.draggable {
+    cursor: grab;
+}
