--- a/css/prettyscribe.css
+++ b/css/prettyscribe.css
@@ -596,3 +596,7 @@ body:not(.single_column) .wh40k_unit_sheet > table > * > * > td.subTableTd > div
 .draggable_drop_target_top {
     border-top: 2px solid green;
 }
+
+#reset-order-button {
+    margin-bottom: 10px;
+}
