deploy: d1f7c5dc997cbbf8eed8e230e6b6159223ba1aea

--- a/css/prettyscribe.css
+++ b/css/prettyscribe.css
@@ -306,9 +306,14 @@ label {
     font-size: 0.6em;
 }
 
+.wh40k_unit_sheet > table > thead.unit_header > tr > td > div.unit_count,
 .wh40k_unit_sheet > table > thead.unit_header > tr > td > div.unit_cp_costs {
     flex-direction: row-reverse;
     padding-right: calc(var(--notchSize) - 0.25rem) /* Offset td's 0.25rem padding-right. */
+}
+
+.wh40k_unit_sheet > table > thead.unit_header > tr > td > div.unit_count > span::before {
+    content: "ˣ" attr(data-count);
 }
 
 /* Render an octogonal border around certain elements. */
@@ -590,4 +595,8 @@ body:not(.single_column) .wh40k_unit_sheet > table > * > * > td.subTableTd > div
 
 .draggable_drop_target_top {
     border-top: 2px solid green;
+}
+
+#reset-order-button {
+    margin-bottom: 10px;
 }
